优化模板目录规范